--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "assemble": "^0.4.42",
     "assemble-contrib-permalinks": "^0.3.6",
+    "circletype": "^2.0.10",
     "github-markdown-css": "^2.0.7",
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.9.0",
